# ai-research-copilot

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.py
apps/api/: main.py
apps/api/routes/: health.py  research_questions.py
apps/web/: streamlit_app.py
apps/web/pages/: 1_Research_Questions.py
docs/: architecture.md
src/research_copilot/core/: config.py  logging.py
src/research_copilot/research_os/: schemas.py  storage.py
src/research_copilot/services/: health_service.py  research_question_service.py
tests/: test_health.py  test_local_json_storage.py  test_logging.py  test_research_os_schemas.py  test_research_questions_api.py  test_web_research_questions_page.py
