[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-research-copilot"
version = "0.1.0"
description = "A personal AI research operating system."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = [
    ".",
    "src",
]
include = [
    "apps*",
    "research_copilot*",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src",
]
